implement DTO instead of Entities.