@@ -5,6 +5,7 @@ import java.util.Optional;
 import java.util.Set;
 import java.util.stream.Collectors;
 
+import jakarta.persistence.EntityNotFoundException;
 import jakarta.transaction.Transactional;
 
 import org.springframework.data.domain.Page;
@@ -13,6 +14,8 @@ import org.springframework.data.domain.Pageable;
 import org.springframework.stereotype.Service;
 
 import lombok.RequiredArgsConstructor;
+import ua.foxminded.carrest.converter.ProducerConverter;
+import ua.foxminded.carrest.dao.dto.ProducerDTO;
 import ua.foxminded.carrest.dao.model.Producer;
 import ua.foxminded.carrest.repository.ProducerRepository;
 
@@ -21,40 +24,36 @@ import ua.foxminded.carrest.repository.ProducerRepository;
 public class ProducerService {
     private final ProducerRepository producerRepository;
 
-    public List<Producer> findAll(){
-        return producerRepository.findAll();
+    private final ProducerConverter producerConverter;
+
+    public List<ProducerDTO> findAll(){
+        return producerRepository.findAll().
+            stream()
+            .map(producerConverter::convertToDTO)
+            .toList();
     }
 
-    public Page<Producer> findAllPaged(Pageable pageable){
-        return producerRepository.findAll(pageable);
+    public Page<ProducerDTO> findAllPaged(Pageable pageable){
+        return producerRepository.findAll(pageable).map(producerConverter::convertToDTO);
     }
 
-    public Producer save(Producer producer){
-        return producerRepository.save(producer);
-    }
-
-    public void delete(Producer producer){
-        producerRepository.delete(producer);
+    public ProducerDTO save(Producer producer){
+        return producerConverter.convertToDTO(producerRepository.save(producer));
     }
 
     public void deleteById(Long id){
         producerRepository.deleteById(id);
     }
 
-    public Producer update(Producer producer){
-        return Producer.builder()
-            .producerName(producer.getProducerName())
-            .id(producer.getId())
-            .modelName(producer.getModelName())
-            .build();
-    }
-
     public Page<String> getAllModelsPaged(String producerName, Pageable pageable) {
-        List<Producer> producerList = producerRepository.findByProducerName(producerName);
+        List<ProducerDTO> producerList = producerRepository.findByProducerName(producerName)
+            .stream()
+            .map(producerConverter::convertToDTO)
+            .toList();
 
         List<String> modelNames = producerList.stream()
-            .map(Producer::getModelName)
-            .collect(Collectors.toList());
+            .map(ProducerDTO::getModelName)
+            .toList();
 
         int start = (int) pageable.getOffset();
         int end = Math.min((start + pageable.getPageSize()), modelNames.size());
@@ -71,20 +70,29 @@ public class ProducerService {
         producerOptional.ifPresent(producer -> producerRepository.deleteByModelName(producer.getModelName()));
     }
 
-    public Producer updateById(Long id, Producer updatedProducer){
-        Optional<Producer> modifiedProducer = producerRepository.findById(id);
-        modifiedProducer.get().setProducerName(updatedProducer.getProducerName());
-        modifiedProducer.get().setModelName(updatedProducer.getModelName());
-        return producerRepository.save(modifiedProducer.get());
+    @Transactional
+    public ProducerDTO updateById(Long id, Producer updatedProducer) {
+        Optional<ProducerDTO> optionalModifiedProducer = producerRepository.findById(id).map(producerConverter::convertToDTO);
+
+        if (optionalModifiedProducer.isPresent()) {
+            ProducerDTO modifiedProducer = optionalModifiedProducer.get();
+            modifiedProducer.setProducerName(updatedProducer.getProducerName());
+            modifiedProducer.setModelName(updatedProducer.getModelName());
+            return producerConverter.convertToDTO(producerRepository.save(producerConverter.convertToModel(modifiedProducer)));
+        }
+        throw new EntityNotFoundException("Producer with ID " + id + " not found");
     }
 
-    public Producer updateModel(String producerName, String oldModelName, String newModelName) {
-        List<Producer> producers = producerRepository.findByProducerName(producerName);
+    public ProducerDTO updateModel(String producerName, String oldModelName, String newModelName) {
+        List<ProducerDTO> producers = producerRepository.findByProducerName(producerName)
+            .stream()
+            .map(producerConverter::convertToDTO)
+            .toList();
 
-        for (Producer producer : producers) {
+        for (ProducerDTO producer : producers) {
             if (producer.getModelName().equals(oldModelName)) {
                 producer.setModelName(newModelName);
-                producerRepository.save(producer);
+                producerConverter.convertToDTO(producerRepository.save(producerConverter.convertToModel(producer)));
                 return producer;
             }
         }
@@ -92,8 +100,8 @@ public class ProducerService {
         throw new RuntimeException("Producer not found for the given model name: " + oldModelName);
     }
 
-    public Producer findById(Long id){
-        return producerRepository.findById(id).get();
+    public ProducerDTO findById(Long id){
+        return producerConverter.convertToDTO(producerRepository.findById(id).get());
     }
 
 }
